# spaced_repetition

./: .gitignore  README.md  pyproject.toml
spaced_repetition/: card.py  spacereps.py  utils.py
